--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5.1)
+cmake_minimum_required(VERSION 3.10)
 
 project(TinkoffInvestSDK)
 
@@ -15,12 +15,21 @@ set(all_protos ${tink_protos} ${google_api_protos})
 
 foreach (tink_proto ${all_protos})
     get_filename_component(tink_proto_path "${tink_proto}" PATH)
-    file(GLOB tinkoff_proto_files "${tink_proto}")
-    string(REPLACE ${tink_proto_path} ${CMAKE_CURRENT_BINARY_DIR} OUTPUT_FILE_NAMES "${tinkoff_proto_files}")
-    string(REPLACE ".proto" ".pb.cc" OUTPUT_PB_SOURCE "${OUTPUT_FILE_NAMES}")
-    string(REPLACE ".proto" ".grpc.pb.cc" OUTPUT_GRPC_SOURCE "${OUTPUT_FILE_NAMES}")
-    string(REPLACE ".proto" ".pb.h" OUTPUT_PB_HEADER "${OUTPUT_FILE_NAMES}")
-    string(REPLACE ".proto" ".grpc.pb.h" OUTPUT_GRPC_HEADER "${OUTPUT_FILE_NAMES}")
+    get_filename_component(tink_proto_name "${tink_proto}" NAME_WE)
+    get_filename_component(tink_proto_dir "${tink_proto}" DIRECTORY)
+    
+    # Calculate relative path from the investAPI contracts root
+    file(RELATIVE_PATH proto_rel_path "${CMAKE_CURRENT_SOURCE_DIR}/investAPI/src/docs/contracts" "${tink_proto_dir}")
+    
+    # Set output directory preserving the folder structure
+    set(output_dir "${CMAKE_CURRENT_BINARY_DIR}/${proto_rel_path}")
+    file(MAKE_DIRECTORY "${output_dir}")
+    
+    set(OUTPUT_PB_SOURCE "${output_dir}/${tink_proto_name}.pb.cc")
+    set(OUTPUT_GRPC_SOURCE "${output_dir}/${tink_proto_name}.grpc.pb.cc")
+    set(OUTPUT_PB_HEADER "${output_dir}/${tink_proto_name}.pb.h")
+    set(OUTPUT_GRPC_HEADER "${output_dir}/${tink_proto_name}.grpc.pb.h")
+    
     set(str1 "namespace public {")
     set(repl1 "namespace public_ {")
     set(str2 "tinkoff::public::")
@@ -50,15 +59,12 @@ foreach (tink_proto ${all_protos})
               OUTPUT ${OUTPUT_PB_SOURCE} ${OUTPUT_PB_HEADER} ${OUTPUT_GRPC_SOURCE} ${OUTPUT_GRPC_HEADER}
               COMMAND ${_PROTOBUF_PROTOC}
               ARGS --grpc_out "${CMAKE_CURRENT_BINARY_DIR}"
-                --proto_path ${CMAKE_BINARY_DIR}/_deps/grpc-src/third_party/protobuf/src
                 --cpp_out "${CMAKE_CURRENT_BINARY_DIR}"
-                -I "${tink_proto_path}"
+                --experimental_allow_proto3_optional
                 -I "${CMAKE_CURRENT_SOURCE_DIR}/investAPI/src/docs/contracts"
                 --plugin=protoc-gen-grpc="${_GRPC_CPP_PLUGIN_EXECUTABLE}"
                 "${tink_proto}"
               COMMAND sh ${CMAKE_CURRENT_SOURCE_DIR}/cmake/fix_keywords.sh ${OUTPUT_PB_SOURCE} ${OUTPUT_PB_HEADER} ${OUTPUT_GRPC_SOURCE} ${OUTPUT_GRPC_HEADER}
-              #COMMAND sh "sed -i -- 's/${str1}/${repl1}/g' ${OUTPUT_PB_SOURCE} ${OUTPUT_PB_HEADER} ${OUTPUT_GRPC_SOURCE} ${OUTPUT_GRPC_HEADER}"
-              #COMMAND sh "sed -i -- 's/${str2}/${repl2}/g' ${OUTPUT_PB_SOURCE} ${OUTPUT_PB_HEADER} ${OUTPUT_GRPC_SOURCE} ${OUTPUT_GRPC_HEADER}"
               DEPENDS "${tink_proto}")
     endif()
 
