Updates CI workflow to use specific Ubuntu version

--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -17,7 +17,7 @@ jobs:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v4
@@ -26,8 +26,7 @@ jobs:
       run: sudo apt-get update && sudo apt-get upgrade -y
 
     - name: install dependencies
-      run: sudo apt-get install -y build-essential cmake autoconf libtool pkg-config libgrpc++-dev \
-        libprotobuf-dev protobuf-compiler-grpc protobuf-compiler
+      run: sudo apt-get install -y build-essential cmake autoconf libtool pkg-config libgrpc++-dev libprotobuf-dev protobuf-compiler-grpc protobuf-compiler
 
     - name: Get investAPI
       run: git submodule update --init --recursive --remote --merge
