--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: install dependencies
-      run: sudo apt-get update && sudo apt-get upgrade -y
+      run: sudo apt-get update && sudo apt-get upgrade -y && 
            sudo apt-get install -y build-essential cmake autoconf libtool pkg-config libgrpc++-dev 
            libprotobuf-dev protobuf-compiler-grpc protobuf-compiler
 
